[package]
name = "api-client"
version = "0.1.0"
authors = ["John Peel <john@dgby.org>"]
edition = "2021"
description = "Provides a macro for quickly creating REST api client structs"
repository = "https://github.com/JohnPeel/api-client/"
documentation = "https://docs.rs/api-client/latest/api_client/"
license = "MIT"
readme = "README.md"

[features]
default = ["bytes", "json"]
json = ["reqwest/json"]

[dependencies]
async-trait = "0.1"
bytes = { version = "1.2", optional = true }
reqwest = { version = "0.11", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio-test = "0.4"
