[package]
name = "api-client"
version = "0.2.0"
authors = ["John Peel <john@dgby.org>"]
edition = "2021"
description = "Provides a macro for quickly creating REST api client structs"
repository = "https://github.com/JohnPeel/api-client/"
documentation = "https://docs.rs/api-client/latest/api_client/"
license = "MIT"
readme = "README.md"
rust-version = "1.57"

[features]
default = ["json", "multipart"]
json = ["reqwest/json"]
multipart = ["reqwest/multipart"]

[dependencies]
async-trait = "0.1.0"
reqwest = { version = "0.11.0", default-features = false }

[dev-dependencies]
bytes = { version = "1.2.0" }
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
